P3_MARCO_GARCIA_PABLO_ROIG/tests/invalid/15_not_on_int.lava
int a = 5;
boolean b = !a;
